<resources>
    <string name="app_name">CocktailBar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cocktails">MY COCKTAILS</string>
    <string name="add_your_cocktail">Add your first\n cocktail here</string>
    <string name="down_arrow">↓</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="recipe">Recipe</string>
    <string name="purple_rain">purple rain</string>
</resources>