<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.AddCocktailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/load_images_im"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/border"
            android:scaleType="center"
            android:src="@drawable/frame"
            app:layout_constraintBottom_toTopOf="@+id/cocktail_name_til"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cocktail_name_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_images_im">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_name_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cocktail_description_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cocktail_name_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_description_tiet"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="left"
                android:imeOptions="actionDone"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cocktail_recipe_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/recipe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cocktail_description_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_recipe_tiet"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="left"
                android:imeOptions="actionDone"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@+id/cocktail_recipe_til" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/border"
            android:text="@string/cancel"
            android:theme="@style/Button.White"
            app:layout_constraintTop_toBottomOf="@+id/save_bt"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>